examples/test/testpolicy6722.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6722
  namespace: namespace136
spec:
  podSelector:
    matchLabels:
      key1: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value48
      podSelector:
        matchLabels:
          key46: value27
          key21: value10
          key7: value35
